feat: Build modern React frontend with Web3 integration
- Add responsive React application with modern UI components
- Implement Web3 wallet connection and blockchain interaction
- Add comprehensive dashboard for property management
- Include token management, compliance, and lease management pages
- Add real-time contract interaction and transaction handling
- Include MetaMask integration and wallet connection components
- Add contract ABIs and deployment address management

--- a/frontend/src/contracts/LeaseManager.json
+++ b/frontend/src/contracts/LeaseManager.json
@@ -39,6 +39,17 @@
       "type": "error"
     },
     {
+      "inputs": [
+        {
+          "internalType": "address",
+          "name": "token",
+          "type": "address"
+        }
+      ],
+      "name": "SafeERC20FailedOperation",
+      "type": "error"
+    },
+    {
       "anonymous": false,
       "inputs": [
         {
